--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,3 +18,11 @@ mat-grid-tile {
     max-width: 1000px;
     max-height: 1000px;
   }
+
+  textarea {
+    width: 100%;
+    height: 100%;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
